--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,165 +169,165 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - destroy-environment
 
-  configure-infrastructure:
-    docker:
-      # Docker image here that supports Ansible
-      - image: python:3.10-alpine3.16
-    steps:
-      # Checkout code from git
-      - checkout
-      # Add ssh keys with fingerprint
-      - add_ssh_keys:
-          fingerprints:
-            - "e1:5a:a5:2b:f9:62:c8:83:ad:81:a8:6f:a9:9c:77:73"
-      # attach workspace
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache ansible tar gzip aws-cli openssh
-      - run:
-          name: Configure server
-          command: |
-            pwd
-            cd .circleci/ansible
-            ls -al
-            ansible-playbook -i inventory.txt configure-server.yml
-          no_output_timeout: 30m
-      # Here's where you will add some code to rollback on failure      
+  # configure-infrastructure:
+  #   docker:
+  #     # Docker image here that supports Ansible
+  #     - image: python:3.10-alpine3.16
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     # Add ssh keys with fingerprint
+  #     - add_ssh_keys:
+  #         fingerprints:
+  #           - "e1:5a:a5:2b:f9:62:c8:83:ad:81:a8:6f:a9:9c:77:73"
+  #     # attach workspace
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update --no-cache ansible tar gzip aws-cli openssh
+  #     - run:
+  #         name: Configure server
+  #         command: |
+  #           pwd
+  #           cd .circleci/ansible
+  #           ls -al
+  #           ansible-playbook -i inventory.txt configure-server.yml
+  #         no_output_timeout: 30m
+  #     # Here's where you will add some code to rollback on failure      
 
-  run-migrations:
-    docker:
-      # Docker image here that supports NodeJS
-      - image: circleci/node:13.8.0
-    steps:
-      # Checkout code from git
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
+  # run-migrations:
+  #   docker:
+  #     # Docker image here that supports NodeJS
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - restore_cache:
+  #         keys: [backend-build]
           
           
-      - run:
-          name: Run migrations
-          command: |
-            cd backend
-            sudo npm install -g npm
-            npm run migrations > migrations_dump.txt
-            cat migrations_dump.txt
-      - run:
-          name: Send migration results to kvdb.io
-          command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-            then
-                curl https://kvdb.io/Hz4vpLBSgz9tsLkNDNSvDB/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-            fi
-    # Here's where you will add some code to rollback on failure 
-      - destroy-environment
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           cd backend
+  #           sudo npm install -g npm
+  #           npm run migrations > migrations_dump.txt
+  #           cat migrations_dump.txt
+  #     - run:
+  #         name: Send migration results to kvdb.io
+  #         command: |
+  #           if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+  #           then
+  #               curl https://kvdb.io/Hz4vpLBSgz9tsLkNDNSvDB/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+  #           fi
+  #   # Here's where you will add some code to rollback on failure 
+  #     - destroy-environment
 
-  deploy-frontend:
-    docker:
-      # Docker image here that supports AWS CLI
-      - image: python:3.10-alpine3.16
-    steps:
-      # Checkout code from git
-      - checkout
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar
-            apk add --update --no-cache gzip
-            apk add --update --no-cache nodejs
-            apk add --update --no-cache npm
-            apk add --update --no-cache aws-cli
-            apk add --update --no-cache curl
+  # deploy-frontend:
+  #   docker:
+  #     # Docker image here that supports AWS CLI
+  #     - image: python:3.10-alpine3.16
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update --no-cache tar
+  #           apk add --update --no-cache gzip
+  #           apk add --update --no-cache nodejs
+  #           apk add --update --no-cache npm
+  #           apk add --update --no-cache aws-cli
+  #           apk add --update --no-cache curl
             
-      - run:
-          name: Get backend url
-          command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-            --query "Reservations[*].Instances[*].[PublicIpAddress]* \
-            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL = ${API_URL}"
-            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-            cat frontend/.env
+  #     - run:
+  #         name: Get backend url
+  #         command: |
+  #           export BACKEND_IP=$(aws ec2 describe-instances \
+  #           --query "Reservations[*].Instances[*].[PublicIpAddress]* \
+  #           --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #           --output text)
+  #           export API_URL="http://${BACKEND_IP}:3030"
+  #           echo "API_URL = ${API_URL}"
+  #           echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+  #           cat frontend/.env
             
-      - run:
-          name: Deploy frontend objects
-          command: |
-            cd frontend
-            npm install
-            npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+  #     - run:
+  #         name: Deploy frontend objects
+  #         command: |
+  #           cd frontend
+  #           npm install
+  #           npm run build
+  #           tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+  #           aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
             
             
-      # Here's where you will add some code to rollback on failure 
-      - destroy-environment
-      - revert-migrations
+  #     # Here's where you will add some code to rollback on failure 
+  #     - destroy-environment
+  #     - revert-migrations
 
                     
-  deploy-backend:
-    docker:
-      # Docker image here that supports Ansible
-      - image: python:3.10-alpine3.16
-    steps:
-      # Checkout code from git
-      - checkout
-      # Add ssh keys with fingerprint
-      - add_ssh_keys:
-          fingerprints:
-              - "e1:5a:a5:2b:f9:62:c8:83:ad:81:a8:6f:a9:9c:77:73"
+  # deploy-backend:
+  #   docker:
+  #     # Docker image here that supports Ansible
+  #     - image: python:3.10-alpine3.16
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     # Add ssh keys with fingerprint
+  #     - add_ssh_keys:
+  #         fingerprints:
+  #             - "e1:5a:a5:2b:f9:62:c8:83:ad:81:a8:6f:a9:9c:77:73"
               
-      - attach_workspace:
-          at: ~/
+  #     - attach_workspace:
+  #         at: ~/
       
-      # attach workspace
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache ansible tar gzip nodejs npm curl aws-cli
-      - run:
-          name: Deploy backend
-          command: |
-            pwd
-            cd backend
+  #     # attach workspace
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update --no-cache ansible tar gzip nodejs npm curl aws-cli
+  #     - run:
+  #         name: Deploy backend
+  #         command: |
+  #           pwd
+  #           cd backend
             
-            touch .env
-            echo ENVIRONMENT=production > ".env"
-            echo TYPEORM_CONNECTION=postgres >> ".env"
-            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> ".env"
-            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> ".env"
-            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> ".env"
-            echo NODE_ENV=production >> ".env"
-            echo TYPEORM_HOST=$TYPEORM_HOST >> ".env"
-            echo TYPEORM_PORT=$TYPEORM_PORRT >> ".env"
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ".env"
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ".env"
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ".env"
+  #           touch .env
+  #           echo ENVIRONMENT=production > ".env"
+  #           echo TYPEORM_CONNECTION=postgres >> ".env"
+  #           echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> ".env"
+  #           echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> ".env"
+  #           echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> ".env"
+  #           echo NODE_ENV=production >> ".env"
+  #           echo TYPEORM_HOST=$TYPEORM_HOST >> ".env"
+  #           echo TYPEORM_PORT=$TYPEORM_PORRT >> ".env"
+  #           echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ".env"
+  #           echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ".env"
+  #           echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ".env"
             
-            pwd
-            ls -al
-            npm install
-            npm run build
-            cd ..
-            pwd
-            ls -al
-            tar -C backend -czvf artifact.tar.gz
+  #           pwd
+  #           ls -al
+  #           npm install
+  #           npm run build
+  #           cd ..
+  #           pwd
+  #           ls -al
+  #           tar -C backend -czvf artifact.tar.gz
             
-            cd .circleci/ansible
+  #           cd .circleci/ansible
             
-            echo "Contents  of the inventory.txt file is -------"
-            cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml
+  #           echo "Contents  of the inventory.txt file is -------"
+  #           cat inventory.txt
+  #           ansible-playbook -i inventory.txt deploy-backend.yml
             
-      # Here's where you will add some code to rollback on failure  
-      - destroy-environment
-      - revert-migrations
+  #     # Here's where you will add some code to rollback on failure  
+  #     - destroy-environment
+  #     - revert-migrations
 
 #   smoke-test:
 #     docker:
@@ -405,14 +405,14 @@ workflows:
           filters:
             branches:
               only: [master]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      # - deploy-frontend:
+      #     requires: [run-migrations]
+      # - deploy-backend:
+      #     requires: [run-migrations]
       # - smoke-test:
       #     requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
