--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,8 +194,8 @@ jobs:
             cd .circleci/ansible
             ls -al
             ansible-playbook -i inventory.txt configure-server.yml
-          no_output_timeout: 30m
-      # Here's where you will add some code to rollback on failure      
+      # Here's where you will add some code to rollback on failure  
+      - destroy-environment
 
   # run-migrations:
   #   docker:
