--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -20,11 +20,11 @@
 
     - name: "install python for Ansible."
       # Your code here
-      become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
+      apt:
+        name: python3
+        state: latest
+        update_cache: yes
       
-    - setup:
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
