--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -24,9 +24,9 @@
   #       update_cache: yes
   
   pre_tasks:
-    - name: "wait 600 seconds for target connection to become reachable/usable."
-      wait_for_connection:
-        timeout: 600
+    # - name: "wait 600 seconds for target connection to become reachable/usable."
+    #   wait_for_connection:
+    #     timeout: 600
 
     - name: "install python for Ansible."
       become: true
