fixed smoke test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ jobs:
             echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> ".env"
             echo NODE_ENV=production >> ".env"
             echo TYPEORM_HOST=$TYPEORM_HOST >> ".env"
-            echo TYPEORM_PORT=$TYPEORM_PORRT >> ".env"
+            echo TYPEORM_PORT=$TYPEORM_PORT >> ".env"
             echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ".env"
             echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ".env"
             echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ".env"
@@ -316,7 +316,7 @@ jobs:
             cd ..
             pwd
             ls -al
-            tar -C backend -czvf artifact.tar.gz.
+            tar -C backend -czvf artifact.tar.gz
             
             cd .circleci/ansible
             
