--- a/.circleci/ansible/roles/deploy/tasks/main.yaml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yaml
@@ -9,7 +9,7 @@
   apt:
     upgrade: yes
 
-- name: "remove stale dependencies"
+- name: "remove stale dependencies."
   become: true
   apt:
     autoremove: yes
